# fast-simplification

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.rst  api.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements_build.txt  requirements_docs.txt  requirements_test.txt  search.html  searchindex.js  setup.py  sg_execution_times.html
.github/workflows/: build-wheels.yml  test-windows.yml  test.yml  testing-and-deployment.yml
_autosummary/: fast_simplification.replay_simplification.html  fast_simplification.simplify.html  fast_simplification.simplify_mesh.html
_downloads/2d3c99aecd21bffc508f113ed993a0ff/: replay.ipynb
_downloads/78c34ea76e23ebfb78cef5c649d7cc15/: replay.py
_downloads/a62c4f82b83bb5213a6f4dfab8339083/: simplify.ipynb
_sources/: api.rst.txt  sg_execution_times.rst.txt
_sources/_autosummary/: fast_simplification.replay_simplification.rst.txt
_sources/examples/: index.rst.txt  replay.rst.txt  sg_execution_times.rst.txt  simplify.rst.txt
_static/: documentation_options.js
doc/: api.rst  conf.py
doc/_autosummary/: fast_simplification.simplify.rst  fast_simplification.simplify_mesh.rst
examples/: index.html  isolated_points.py  repair_planar.py  replay.html  replay.py  sg_execution_times.html  simplify.html  simplify.py
fast_simplification/: Replay.h  Simplify.h  __init__.py  _replay.pyx  _simplify.pyx  _version.py  fast_simplification.py  replay.py  simplify.py  wrapper.h  wrapper_replay.h
tests/: test_collapses.py  test_map_isolated_points.py  test_replay.py  test_simplify.py
