[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "cython>=3.0.0",
  "numpy>=2,<3",
  "setuptools>=45.0",
  "wheel>=0.37.0",
]

[tool.pytest.ini_options]
junit_family= "legacy"
filterwarnings = [
    # bogus numpy ABI warning (see numpy/#432)
    "ignore:.*numpy.dtype size changed.*:RuntimeWarning",
    "ignore:.*numpy.ufunc size changed.*:RuntimeWarning",
    "ignore:.*Distutils was imported before Setuptools*",
]

[tool.cibuildwheel]
archs = ["auto64"]  # 64-bit only
skip = "cp36-* cp37-* pp* *musllinux*"  # disable PyPy and musl-based wheels
test-requires = "pyvista pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.macos]
archs = ["native"]

[tool.isort]
profile = "black"
line_length = 100
force_sort_within_sections = true
default_section = "THIRDPARTY"
skip_glob = ["__init__.py"]
src_paths = ["doc", "fast_simplification", "tests"]

[tool.codespell]
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,build,fast_simplification/Simplify.h,PKG-INFO,*.mypy_cache/*,./docker/mapdl/*,./_unused/*'
quiet-level = 3

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []